--- a/src/main/features/ccj/views/confirmation.njk
+++ b/src/main/features/ccj/views/confirmation.njk
@@ -11,17 +11,39 @@
     <div class="column-two-thirds">
 
       <div class="govuk-box-highlight">
-        <h1 class="bold-large">{{ t('County Court Judgment requested') }}</h1>
+        {% if redetermination_requested_at !== undefined %}
+          <h1 class="bold-large">
+            {{ t('You’ve asked for a judge to decide a repayment plan') }}
+          </h1>
+          <p>
+          <div class="reference-number">
+            <span>{{ t('Your claim number:') }}</span>
+            <h1 class="bold-large">{{ claim.claimNumber }}</h1>
+          </div>
+          </p>
+          <p>
+            <span class="bold">{{ redetermination_requested_at | date }}</span>
+          </p>
+        {% else %}
+          <h1 class="bold-large">{{ t('County Court Judgment requested') }}</h1>
+        {% endif %}
       </div>
 
       <h2 class="heading-medium">{{ t('What happens next') }}</h2>
-      <p>{{ t('You requested a County Court Judgment on {{ ccjRequestedAt }}. We’ll contact you within 14 days to tell you whether the judgment has been entered.',
-        { ccjRequestedAt: ccjRequestedAt | date }) }}
-      </p>
-      <p>{{ t('{{ defendantName }} can no longer respond to the claim using this service - they may have responded by post.', { defendantName: defendantName }) }}</p>
+      {% if redetermination_requested_at !== undefined %}
+        <p>{{ t('A judge will decide what the defendant can afford to pay based on their financial details.') }}</p>
 
+        <P>{{ t('We’ll contact both you and {{ defendantName }} to tell you what to do next.') }}</P>
+
+      {% else %}
+
+        <p>{{ t('You requested a County Court Judgment on {{ ccjRequestedAt }}. We’ll contact you within 14 days to tell you whether the judgment has been entered.',
+            { ccjRequestedAt: ccjRequestedAt | date }) }}
+        </p>
+        <p>{{ t('{{ defendantName }} can no longer respond to the claim using this service - they may have responded by post.', { defendantName: defendantName }) }}</p>
+
+      {% endif %}
       <p>{{ t('View your claim status on <a href="{{ url }}">your money claims account</a>.', { url: '/dashboard' }) | safe }}</p>
-
       {{ supportWidget() }}
 
       {% include "includes/service_survey_link.njk" %}
