Update part payment flow to match updated prototype

--- a/src/main/features/claimant-response/views/rejection-reason.njk
+++ b/src/main/features/claimant-response/views/rejection-reason.njk
@@ -2,7 +2,7 @@
 {% from "form.njk" import csrfProtection, saveAndContinueButton, errorSummary, textArea %}
 
 {% if alreadyPaid %}
-  {% set heading = 'Why do you reject their response' %}
+  {% set heading = 'Why did you reject their response?' %}
 {% else %}
   {% set heading = 'Why did you reject the repayment plan?' %}
 {% endif %}
