added changes after code review

--- a/src/main/features/claimant-response/views/court-offer.njk
+++ b/src/main/features/claimant-response/views/court-offer.njk
@@ -19,7 +19,7 @@
               paymentSchedule = courtOrderPaymentPlan.paymentSchedule,
               firstPaymentDate = courtOrderPaymentPlan.firstPaymentDate,
               lastPaymentOn = courtOrderPaymentPlan.completionDate,
-              lengthOfPayment = courtOrderPaymentPlan.lengthOfPayment
+              lengthOfPayment = courtOrderPaymentPlan.paymentLength
               )
       }}
 
