--- a/src/main/features/paid-in-full/views/date-paid.njk
+++ b/src/main/features/paid-in-full/views/date-paid.njk
@@ -1,6 +1,5 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, errorSummary, saveAndContinueButton %}
-{% from "timelineFragment.njk" import timelineFragment %}
 {% from "date.njk" import dateInput %}
 
 {% set heading = ('When did you receive the money?') %}
@@ -13,7 +12,8 @@
         {{ csrfProtection(csrf) }}
 
         <p>{{ t('Enter the exact date the money was clear in your account if you were paid by cheque or bank transfer.') }}</p>
-        {{ dateInput(form = form, name = 'date', hint = 'For example, 10 9 2018') }}
+        {{ dateInput(form = form, name = 'date', hint = t('For example, {{ twoWeeksAgo }}', { twoWeeksAgo : 'now' | addDays(-14) | inputDate })) }}
+
         {{ saveAndContinueButton() }}
       </form>
     </div>
