--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -35,6 +35,13 @@
   <p>{{ t('"{{ reason }}"', { reason: reason }) }}</p>
 {% endmacro %}
 
+{% macro financialDetailsBlock(totalMonthlyIncome, totalMonthlyExpenses, statementOfMeans) %}
+  <h3 class="heading-small form-group-related">{{ t('Their finances') }}</h3>
+  <p>{{ t('Their total monthly income is {{ totalMonthlyIncome }}', { totalMonthlyIncome: totalMonthlyIncome | numeral }) }}</p>
+  <p>{{ t('Their total monthly expenses is {{ totalMonthlyExpenses }}', { totalMonthlyExpenses: totalMonthlyExpenses | numeral }) }}</p>
+  {{ financialDetailsTable(label = 'See their financial details', statementOfMeans = statementOfMeans, classes = 'form-group') }}
+{% endmacro %}
+
 {% macro timelineFragment(timeline) %}
   <table>
     <thead>
@@ -82,7 +89,9 @@
         {% endif %}
 
         {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
-
+        {% if not claim.claimData.defendant.isBusiness %}
+          {{ financialDetailsBlock(totalMonthlyIncome, totalMonthlyExpenses, claim.response.statementOfMeans) }}
+        {% endif %}
       {% endif %}
 
       {% if claim.response.responseType === ResponseType.PART_ADMISSION.value %}
@@ -134,6 +143,9 @@
 
           {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
 
+          {% if not claim.claimData.defendant.isBusiness %}
+            {{ financialDetailsBlock(totalMonthlyIncome, totalMonthlyExpenses, claim.response.statementOfMeans) }}
+          {% endif %}
         {% endif %}
       {% endif %}
 
