fixed failing route test and lint issues

--- a/src/main/features/claimant-response/views/counter-offer-accepted.njk
+++ b/src/main/features/claimant-response/views/counter-offer-accepted.njk
@@ -26,7 +26,7 @@
               paymentSchedule = courtOrderPaymentPlan.paymentSchedule,
               firstPaymentDate = courtOrderPaymentPlan.firstPaymentDate,
               lastPaymentOn = courtOrderPaymentPlan.completionDate,
-              lengthOfPayment = courtOrderPaymentPlan.lengthOfPayment
+              lengthOfPayment = courtOrderPaymentPlan.paymentLength
               )
             }}
           
