Minor edits on five different pages
Mostly changing 'do not' to 'don't' (I have used the correct type of apostrophe I hope).

--- a/src/main/features/claimant-response/views/confirmation/court-suggested-payment-plan.njk
+++ b/src/main/features/claimant-response/views/confirmation/court-suggested-payment-plan.njk
@@ -3,5 +3,5 @@
   ) }}</p>
 
 <p>
-  {{ t('If they do not think they can afford the plan, they can ask for a judge to make a different plan') }}
+  {{ t('If they don’t think they can afford the plan, they can ask for a judge to make a different plan') }}
 </p>
