--- a/src/main/features/response/views/confirmation/part-admission.njk
+++ b/src/main/features/response/views/confirmation/part-admission.njk
@@ -18,6 +18,6 @@
         { amount: amount, claimantName: claimantName }) }}</p>
   {% endif %}
 
-  <p>{{ t('We’ve also sent them your explanation of why you do not believe you owe the amount claimed.') }}</p>
+  <p>{{ t('We’ve also sent them your explanation of why you don’t believe you owe the amount claimed.') }}</p>
   <p>{{ t('We’ll email you to tell you their response. If they don’t respond within 6 months, the claim will be put on hold.') }}</p>
 {% endif %}
