--- a/src/main/features/dashboard/views/defendant.njk
+++ b/src/main/features/dashboard/views/defendant.njk
@@ -17,7 +17,7 @@
     </div>
 
     <div class="column-one-third">
-      {{ aboutClaimWidget(claim = claim, partyType = 'claimant') }}
+      {{ aboutClaimWidget(claim = claim, party = 'claimant') }}
     </div>
   </div>
 {% endblock %}
