--- a/src/main/features/claim/views/reason.njk
+++ b/src/main/features/claim/views/reason.njk
@@ -17,7 +17,9 @@
               {{ t('Tell us why you believe the defendant owes you money.') }}
             </p>
 
-            <p>{{ t('Don’t give us a detailed timeline - we’ll ask for that later.') }}</p>
+            <p>{{ t('Don’t give us a detailed timeline - we’ll ask for that separately.') }}</p>
+
+            <p>{{ t('You’ll have to pay an extra fee if you want to change the details of the claim later.') }}</p>
 
             {% if error %}
               <span class="error-message">{{ t(error) }}</span>
