Change use to try

--- a/src/main/features/claim/views/new-features-consent.njk
+++ b/src/main/features/claim/views/new-features-consent.njk
@@ -20,7 +20,7 @@
           options = [
             {
               bold: false,
-              label: 'I’ll use new online features',
+              label: 'I’ll try new online features',
               value: YesNoOption.YES.option,
               checked: (form.valueFor('consentResponse') === YesNoOption.YES)
             },
