limit instalment amount in court PI to 2 decimal places

--- a/src/main/features/claimant-response/views/counter-offer-accepted.njk
+++ b/src/main/features/claimant-response/views/counter-offer-accepted.njk
@@ -25,8 +25,8 @@
               instalmentAmount = courtOrderPaymentPlan.instalmentAmount,
               paymentSchedule = courtOrderPaymentPlan.paymentSchedule,
               firstPaymentDate = courtOrderPaymentPlan.firstPaymentDate,
-              lastPaymentOn = courtOrderPaymentPlan.completionDate,
-              lengthOfPayment = courtOrderPaymentPlan.paymentLength
+              completionDate = courtOrderPaymentPlan.completionDate,
+              paymentLength = courtOrderPaymentPlan.paymentLength
               )
             }}
           
