--- a/src/main/features/claimant-response/views/court-offer.njk
+++ b/src/main/features/claimant-response/views/court-offer.njk
@@ -18,8 +18,8 @@
               instalmentAmount = courtOrderPaymentPlan.instalmentAmount,
               paymentSchedule = courtOrderPaymentPlan.paymentSchedule,
               firstPaymentDate = courtOrderPaymentPlan.firstPaymentDate,
-              lastPaymentOn = courtOrderPaymentPlan.completionDate,
-              lengthOfPayment = courtOrderPaymentPlan.paymentLength
+              completionDate = courtOrderPaymentPlan.completionDate,
+              paymentLength = courtOrderPaymentPlan.paymentLength
               )
       }}
 
