--- a/src/main/features/claimant-response/views/macro/paymentPlanTable.njk
+++ b/src/main/features/claimant-response/views/macro/paymentPlanTable.njk
@@ -1,4 +1,4 @@
-{% macro paymentPlanTable(id, instalmentAmount, paymentSchedule, firstPaymentDate, lastPaymentOn, lengthOfPayment) %}
+{% macro paymentPlanTable(id, instalmentAmount, paymentSchedule, firstPaymentDate, completionDate, paymentLength) %}
   <fieldset id="{{ id }}" class="form-group">
     <legend>
       <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
@@ -6,8 +6,8 @@
     {{ row('Regular payments of', instalmentAmount | numeral) }}
     {{ row('Frequency of payments', paymentSchedule | renderPaymentSchedule) }}
     {{ row('Make the first payment on', firstPaymentDate | date) }}
-    {{ row('Last payment on', lastPaymentOn | date) }}
-    {{ row('Length of repayment plan', lengthOfPayment) }}
+    {{ row('Last payment on', completionDate | date) }}
+    {{ row('Length of repayment plan', paymentLength) }}
   </fieldset>
 {% endmacro %}
 
