removed creating paymentPlan to get completion date and payment length logic

--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -20,11 +20,7 @@
           {{
           repaymentPlanBlock(
             heading = '',
-            instalmentAmount = instalmentAmount,
-            paymentSchedule = paymentSchedule,
-            firstPaymentDate = firstPaymentDate,
-            lastPaymentOn = lastPaymentOn,
-            lengthOfPayment = lengthOfPayment
+            repaymentPlan = claim.response.paymentIntention.repaymentPlan
           )
           }}
         {% endif %}
