--- a/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
+++ b/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
@@ -1,17 +1,17 @@
 {% from "./paymentPlanTable.njk" import paymentPlanTable %}
 
-{% macro repaymentPlanBlock(heading, instalmentAmount, paymentSchedule, firstPaymentDate, lastPaymentOn, lengthOfPayment) %}
+{% macro repaymentPlanBlock(heading, repaymentPlan) %}
   {% if heading %}
     <h2 class="heading-medium">{{ t(heading) }}</h2>
   {% endif %}
 
   {{ paymentPlanTable(
     id = 'payment-table',
-    instalmentAmount = instalmentAmount,
-    paymentSchedule = paymentSchedule,
-    firstPaymentDate = firstPaymentDate,
-    lastPaymentOn = lastPaymentOn,
-    lengthOfPayment = lengthOfPayment
+    instalmentAmount = repaymentPlan.instalmentAmount,
+    paymentSchedule = repaymentPlan.paymentSchedule,
+    firstPaymentDate = repaymentPlan.firstPaymentDate,
+    lastPaymentOn = repaymentPlan.completionDate,
+    lengthOfPayment = repaymentPlan.paymentLength
   )
   }}
 {% endmacro %}
