restructured the logic for full admission and part admission.

--- a/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
+++ b/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
@@ -10,8 +10,8 @@
     instalmentAmount = repaymentPlan.instalmentAmount,
     paymentSchedule = repaymentPlan.paymentSchedule,
     firstPaymentDate = repaymentPlan.firstPaymentDate,
-    lastPaymentOn = repaymentPlan.completionDate,
-    lengthOfPayment = repaymentPlan.paymentLength
+    completionDate = repaymentPlan.completionDate,
+    paymentLength = repaymentPlan.paymentLength
   )
   }}
 {% endmacro %}
