--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -11,6 +11,8 @@
 {% from "financialDetails.njk" import financialDetailsTable %}
 
 {% set defendantName = claim.claimData.defendant.name %}
+{% set defendantType = claim.claimData.defendant.type %}
+{% set defendantIsBusiness = defendantType === PartyType.COMPANY.value or defendantType === PartyType.ORGANISATION.value %}
 
 {% macro paymentIntentionFragment(amount, paymentIntention) %}
   {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
@@ -54,6 +56,13 @@
   </table>
 {% endmacro %}
 
+{% macro financialDetailsBlock(totalMonthlyIncome, totalMonthlyExpenses, statementOfMeans) %}
+  {% if not defendantIsBusiness %}
+    <h3 class="heading-small form-group-related">{{ t('Their finances') }}</h3>
+    {{ financialDetailsTable(label = 'See their financial details', statementOfMeans = statementOfMeans, classes = 'form-group') }}
+  {% endif %}
+{% endmacro %}
+
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
@@ -78,6 +87,7 @@
         {% endif %}
 
         {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+        {{ financialDetailsBlock(totalMonthlyIncome, totalMonthlyExpenses, claim.response.statementOfMeans) }}
 
       {% endif %}
 
@@ -125,6 +135,18 @@
           {% endif %}
 
           {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+
+          <p>this section works as expected...</p>
+          {{ financialDetailsBlock(totalMonthlyIncome, totalMonthlyExpenses, claim.response.statementOfMeans) }}
+
+          <p>this is broken - as it doesnt calculate the isBusiness logic</p>
+          {% set isBusiness = claim.claimData.defendant.isBusiness %}
+          <p>type = {{ claim.claimData.defendant.type }} </p>
+          <p>isBusiness = {{ isBusiness }} </p>
+          <p>claim.claimData.defendant.isBusiness = {{ claim.claimData.defendant.isBusiness }} </p>
+          {% if not claim.claimData.defendant.isBusiness %}
+            {{ financialDetailsBlock(totalMonthlyIncome, totalMonthlyExpenses, claim.response.statementOfMeans) }}
+          {% endif %}
 
         {% endif %}
       {% endif %}
