--- a/src/main/views/macro/financialDetails.njk
+++ b/src/main/views/macro/financialDetails.njk
@@ -187,9 +187,9 @@
   </details>
 {% endmacro %}
 
-{% macro financialDetailsBlock(isBusinessType, statementOfMeans) %}
-  {% if not isBusinessType %}
-    <h3 class="heading-small form-group-related">{{ t('Their finances') }}</h3>
-    {{ financialDetailsTable(label = 'See their financial details', statementOfMeans = statementOfMeans, classes = 'form-group') }}
+{% macro financialDetailsBlock(claim, headingContent, labelContent, classes = undefined) %}
+  {% if not claim.claimData.defendant.isBusiness() %}
+    <h3 class="heading-small form-group-related">{{ t(headingContent) }}</h3>
+    {{ financialDetailsTable(label = labelContent, statementOfMeans = claim.response.statementOfMeans, classes = classes) }}
   {% endif %}
 {% endmacro %}
