--- a/src/main/features/claimant-response/views/payment-plan.njk
+++ b/src/main/features/claimant-response/views/payment-plan.njk
@@ -17,7 +17,7 @@
     <form method="post" novalidate class="payment-plan-calculation">
       {{ csrfProtection(csrf) }}
 
-      {{ financialDetailsBlock(claim.claimData.defendant.isBusiness(), claim.response.statementOfMeans) }}
+      {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
 
       <input type="hidden" name="totalAmount" value="{{ totalAmount }}"/>
       {{ poundInput('Regular payments of', 'instalmentAmount', form, 'For example, £10', bold = true) }}
