ROC-4306 Incorrect name showing on widget when claimant is also defendant (#901)
* Claim widget details fixed to show correct party type when viewing a claim.

* Switched response labels

* Removed claimant-details.njks, path and index reference

* Changed partyType to party: name refactoring

--- a/src/main/features/claim/views/macro/about-claim-widget.njk
+++ b/src/main/features/claim/views/macro/about-claim-widget.njk
@@ -1,15 +1,15 @@
 {% from "internalLink.njk" import internalLink %}
 
-{% macro aboutClaimWidget(user, claim, showResponse = true) %}
+{% macro aboutClaimWidget(party, claim, showResponse = true) %}
 
-{% if user.id === claim.claimantId %}
+{% if party === 'defendant' %}
   {% set otherPartyLabel = 'Defendant name:' %}
   {% set otherPartyName = claim.claimData.defendant.name %}
-  {% set responseLabel = 'Defendant’s response:' %}
-{% elif user.id === claim.defendantId %}
+  {% set responseLabel = 'Your response:' %}
+{% elseif party === 'claimant' %}
   {% set otherPartyLabel = 'Claimant name:' %}
   {% set otherPartyName = claim.claimData.claimant.name %}
-  {% set responseLabel = 'Your response:' %}
+  {% set responseLabel = 'Defendant response:' %}
 {% endif %}
 
 <div class="about-claim-widget">
