Fix typo in contents

--- a/src/main/common/components/free-mediation/free-mediation.njk
+++ b/src/main/common/components/free-mediation/free-mediation.njk
@@ -18,7 +18,7 @@
     <p>{{ t('A mediator will:') }}</p>
 
     <ul class="list list-bullet">
-      <li>{{ t('listen to each side separately - you won’t talk to directly to the other side') }}</li>
+      <li>{{ t('listen to each side separately - you won’t talk directly to the other side') }}</li>
       <li>{{ t('ask you to consider what the other side says - they won’t force you to settle') }}</li>
       <li>{{ t('help you reach an agreement, if possible') }}</li>
     </ul>
