--- a/src/main/features/response/views/statement-of-means/dependants/disability.njk
+++ b/src/main/features/response/views/statement-of-means/dependants/disability.njk
@@ -11,11 +11,11 @@
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
             data-event-action="SoM: Are any of the children that live with you disabled?"
-            data-event-label-from="option">
+            data-event-label-from="dependantDisabled">
 
         {{ csrfProtection(csrf) }}
 
-        {{ yesNoRadio(t('Are any of the children that live with you disabled?'), 'option', form) }}
+        {{ yesNoRadio(t('Are any of the children that live with you disabled?'), 'dependantDisabled', form) }}
 
         {{ saveAndContinueButton() }}
 
