--- a/src/main/features/response/views/statement-of-means/partner/partner-pension.njk
+++ b/src/main/features/response/views/statement-of-means/partner/partner-pension.njk
@@ -11,11 +11,11 @@
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
             data-event-action="SoM: Does your partner receive a pension?"
-            data-event-label-from="option">
+            data-event-label-from="partnerPension">
 
         {{ csrfProtection(csrf) }}
 
-        {{ yesNoRadio(t('Does your partner receive a pension?'), 'option', form) }}
+        {{ yesNoRadio(t('Does your partner receive a pension?'), 'partnerPension', form) }}
 
         {{ saveAndContinueButton() }}
 
