--- a/src/main/features/response/views/statement-of-means/partner/partner-severe-disability.njk
+++ b/src/main/features/response/views/statement-of-means/partner/partner-severe-disability.njk
@@ -11,11 +11,11 @@
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
             data-event-action="SoM: Is your partner severely disabled?"
-            data-event-label-from="option">
+            data-event-label-from="partnerSeverelyDisabled">
 
         {{ csrfProtection(csrf) }}
 
-        {{ yesNoRadio(t('Is your partner severely disabled?'), 'option', form) }}
+        {{ yesNoRadio(t('Is your partner severely disabled?'), 'partnerSeverelyDisabled', form) }}
 
         {{ saveAndContinueButton() }}
 
