--- a/src/main/features/response/views/statement-of-means/severe-disability.njk
+++ b/src/main/features/response/views/statement-of-means/severe-disability.njk
@@ -11,11 +11,11 @@
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
             data-event-action="SoM: Are you severely disabled?"
-            data-event-label-from="option">
+            data-event-label-from="severelyDisabled">
 
         {{ csrfProtection(csrf) }}
 
-        {{ yesNoRadio(t('Are you severely disabled?'), 'option', form) }}
+        {{ yesNoRadio(t('Are you severely disabled?'), 'severelyDisabled', form) }}
 
         {{ saveAndContinueButton() }}
 
