Fixed typo on claimant response confirmation page

--- a/src/main/features/claimant-response/views/confirmation/court-suggested-payment-plan.njk
+++ b/src/main/features/claimant-response/views/confirmation/court-suggested-payment-plan.njk
@@ -1,4 +1,4 @@
-<p>{{ t('We’ll email {{ defendantFullName }} the repayment plan and thhe settlement agreement for them to sign.',
+<p>{{ t('We’ll email {{ defendantFullName }} the repayment plan and the settlement agreement for them to sign.',
     { defendantFullName: claim.claimData.defendant.name }
   ) }}</p>
 
